--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,18 +17,20 @@
     <Button
         android:layout_width="349dp"
         android:layout_height="wrap_content"
+        android:text="@string/immediately"
+        android:id="@+id/immediately"
+        android:background="@android:drawable/picture_frame"
+        android:layout_marginBottom="3dp"/>
+
+    <Button
+        android:layout_width="349dp"
+        android:layout_height="wrap_content"
         android:text="@string/change_flower"
         android:id="@+id/change_flower"
         android:background="@android:drawable/picture_frame"
         android:layout_marginBottom="3dp"
         android:gravity="center|center_horizontal" />
-    <Button
-        android:layout_width="349dp"
-        android:layout_height="wrap_content"
-        android:text="@string/immediately"
-        android:id="@+id/immediately"
-        android:background="@android:drawable/picture_frame"
-        android:layout_marginBottom="3dp"/>
+
     <Button
         android:layout_width="349dp"
         android:layout_height="wrap_content"
@@ -66,7 +68,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView3"
+                android:id="@+id/photo"
                 android:src="@drawable/ic_launcher" />
 
         </LinearLayout>
