--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,8 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="175dp"
         android:weightSum="1"
-        android:id="@+id/layput"
-        android:layout_marginTop="50dp">
+        android:id="@+id/layout"
+        android:layout_marginTop="30dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -113,72 +113,19 @@
                     android:orientation="vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    >
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical">
 
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="設定:"
-                            android:id="@+id/setting_status"
-                            android:textColor="#2a7363"
-                            android:textSize="15dp"
-                            android:paddingLeft="@dimen/activity_horizontal_margin" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="客製化"
-                            android:id="@+id/setting_status_value"
-                            android:textColor="#3e5f73"
-                            android:textSize="15dp"
-                            android:paddingLeft="@dimen/activity_horizontal_margin" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        >
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="濕度:"
-                            android:id="@+id/water_status"
-                            android:textColor="#2a7363"
-                            android:textSize="15dp"
-                            android:paddingLeft="@dimen/activity_horizontal_margin" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="50%-60%"
-                            android:id="@+id/water_status_value"
-                            android:textColor="#3e5f73"
-                            android:textSize="15dp"
-                            android:paddingLeft="@dimen/activity_horizontal_margin" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="溫度:"
-                            android:id="@+id/temperature_status"
-                            android:textColor="#2a7363"
-                            android:textSize="15dp"
-                            android:paddingLeft="@dimen/activity_horizontal_margin" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="10度-25度"
-                            android:id="@+id/temperature_status_value"
-                            android:textColor="#3e5f73"
-                            android:textSize="15dp"
-                            android:paddingLeft="@dimen/activity_horizontal_margin" />
-                    </LinearLayout>
+                    <TextView
+                        android:layout_width="106dp"
+                        android:layout_height="45dp"
+                        android:text="客製化"
+                        android:id="@+id/setting_status_value"
+                        android:textColor="#3e5f73"
+                        android:textSize="20dp"
+                        android:paddingLeft="@dimen/activity_horizontal_margin"
+                        android:layout_gravity="center_vertical" />
+
                 </LinearLayout>
             </LinearLayout>
 
