--- a/app/src/main/res/layout/activity_changeflower.xml
+++ b/app/src/main/res/layout/activity_changeflower.xml
@@ -13,4 +13,8 @@
     android:weightSum="1"
     android:background="@drawable/background">
 
+    <RadioGroup
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/radioGroup"></RadioGroup>
 </LinearLayout>
