--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -11,6 +11,131 @@
     android:orientation="vertical"
     tools:context=".CustomerActivity"
     android:weightSum="1"
-    android:background="@drawable/background">
+    android:background="@drawable/main_background"
+    android:gravity="center_horizontal">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="客製化設定"
+        android:id="@+id/textView10"
+        android:layout_marginTop="130dp"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="溫度:"
+            android:id="@+id/textView11" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lowTem"
+            android:layout_weight="0.30"
+            android:hint="15"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="度~"
+            android:id="@+id/lowTemp" />
+
+        <EditText
+            android:layout_width="83dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/highTem"
+            android:layout_gravity="right"
+            android:maxWidth="9dp"
+            android:hint="20"
+            android:layout_weight="0.09" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="度"
+            android:id="@+id/textView12" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="濕度:"
+            android:id="@+id/textView13" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lowHum"
+            android:layout_weight="0.30"
+            android:hint="80" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="%~"
+            android:id="@+id/textView14" />
+
+        <EditText
+            android:layout_width="83dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/highHum"
+            android:layout_gravity="right"
+            android:maxWidth="9dp"
+            android:hint="85"
+            android:layout_weight="0.09" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="%"
+            android:id="@+id/textView15" />
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="334dp"
+        android:layout_height="wrap_content"
+        android:text="儲存"
+        android:id="@+id/submitButton"
+        android:background="@drawable/abc_popup_background_mtrl_mult"
+        android:layout_marginTop="120dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:gravity="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="*未填寫的空格將使用預設值設定"
+        android:id="@+id/textView16"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ff1802" />
 
 </LinearLayout>
