--- a/app/src/main/res/layout/activity_immediate.xml
+++ b/app/src/main/res/layout/activity_immediate.xml
@@ -13,4 +13,100 @@
     android:weightSum="1"
     android:background="@drawable/background">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.02"
+        android:gravity="center_vertical|center_horizontal"
+        android:weightSum="1">
+
+        <ImageButton
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/fan_on"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/fan_on" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="開起風扇"
+            android:id="@+id/textView4"
+            android:textSize="16dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.02"
+        android:gravity="center_vertical|center_horizontal"
+        android:weightSum="1" >
+
+        <ImageButton
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/fan_off"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/fan_off" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="關閉風扇"
+            android:id="@+id/textView5"
+            android:textSize="16dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.02"
+        android:gravity="center_vertical|center_horizontal"
+        android:weightSum="1" >
+
+        <ImageButton
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/water"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/water" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="澆水"
+            android:id="@+id/textView6"
+            android:textSize="16dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.02"
+        android:gravity="center_vertical|center_horizontal"
+        android:weightSum="1" >
+
+        <ImageButton
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/camera"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/camera" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="照相"
+            android:id="@+id/textView7"
+            android:textSize="16dp" />
+    </LinearLayout>
+
 </LinearLayout>
