--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,11 +50,11 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:id="@+id/la"
             android:weightSum="1"
-            android:layout_weight="1.28">
+            android:gravity="center">
 
             <TextView
                 android:layout_width="match_parent"
@@ -66,8 +66,8 @@
                 android:paddingTop="@dimen/activity_vertical_margin"/>
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:id="@+id/photo"
                 android:src="@drawable/ic_launcher" />
 
@@ -75,7 +75,7 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical">
 
@@ -119,7 +119,7 @@
                     <TextView
                         android:layout_width="159dp"
                         android:layout_height="45dp"
-                        android:text="碩取資料。。"
+                        android:text="擷取資料.."
                         android:id="@+id/setting_status_value"
                         android:textColor="#3e5f73"
                         android:textSize="20dp"
@@ -179,7 +179,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="碩取資料。。"
+                            android:text="work..."
                             android:id="@+id/evn_temperature_value"
                             android:textColor="#3e5f73"
                             android:textSize="15dp"
@@ -201,7 +201,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="碩取資料。。"
+                            android:text="work..."
                             android:id="@+id/air_water_value"
                             android:textColor="#3e5f73"
                             android:textSize="15dp"
@@ -222,7 +222,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="碩取資料。。"
+                            android:text="work..."
                             android:id="@+id/soil_water_value"
                             android:textColor="#3e5f73"
                             android:textSize="15dp"
